# zero2prod

./: Cargo.toml  Dockerfile  build-dockerfile.sh  configuration.yml  requests.http  spec.yaml
.sqlx/: query-b75cba194d0dd4d5c17523a5683860020542961b3fbc31cbc43b76e183574de0.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20260201002514_create_subscriptions_table.sql  20260214014959_make_status_not_null_in_subscriptions.sql  20260214015734_create_subscriptions_tokens_table.sql  20260222000621_seed_user.sql
scripts/: apply-migrations-to-db.sh  first-migration.sh  init_db.sh  init_pgadmin.sh  init_redis.sh  install-sqlx-cli.sh  setup-network.sh
scripts/digital_ocean/: create_application_from_spec.sh  update-app-from-spect.sh
src/: application.rs  authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: confirm_subscription.rs  health_check.rs  home.html  mod.rs  newsletters.rs  subscriptions.rs
src/routes/admin/: dashboard.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check_test.rs
tests/api/: admin_dashboard_tests.rs  change_password.rs  confirm_subscription.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter_tests.rs  subscriptions.rs  utils.rs
