[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
#name = "zero2prod"
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-session = { version = "0.11.0", features = ["redis-session-rustls"] }
actix-web = "4.12.1"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
anyhow = "1.0.101"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
chrono = { version = "0.4.43", features = ["clock"] }
claims = "0.8.0"
config = "0.15.19"
linkify = "0.10.0"
once_cell = "1.21.3"
rand = { version = "0.10.0", features = ["std_rng"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-actix-web = "0.7.21"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
validator = "0.20.0"
log = "0.4.29"
serde_json = "1"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.11.2"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
fake = "~2.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"
wiremock = "0.6.5"
